--- a/examples/login/package.json
+++ b/examples/login/package.json
@@ -1,6 +1,7 @@
 {
   "name": "geocaching-client-example",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "main": "app.js",
   "dependencies": {
     "body-parser": ">= 1.4.3",
     "cookie-parser": ">= 1.3.2",
@@ -11,6 +12,7 @@
     "method-override": ">= 2.0.2",
     "morgan": ">= 1.1.1",
     "passport": ">= 0.0.0",
-    "passport-geocaching": ">= 0.0.0"
+    "geocaching-api": "^1.0.2",
+    "lodash": "^3.10.1"
   }
 }
