--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geocaching-api",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "lib/geocaching-api.js",
   "scripts": {
@@ -32,7 +32,7 @@
     "request": "^2.x"
   },
   "devDependencies": {
-    "mocha": "^3.x"
+    "mocha": "^3.x",
     "chai": "*"
   }
 }
