--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "lib/geocaching-api.js",
   "scripts": {
+    "start": "node examples/login/app",
     "test": "./node_modules/.bin/mocha test/* -t 70000 -R spec --bail --globals domain,_events,_maxListeners"
   },
   "keywords": [
