--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "geocaching-api",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "lib/geocaching-api.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha test/* -t 70000 -R spec --bail --globals domain,_events,_maxListeners"
+    "start": "node examples/login/app",
+    "test": "./node_modules/.bin/mocha test/api-* -t 70000 -R spec --bail --globals domain,_events,_maxListeners"
   },
   "keywords": [
     "geocaching",
@@ -13,16 +14,26 @@
     "geoking",
     "pitaso"
   ],
-  "author": "Ludovic Valente <ludovic.valente@gmail.com> (http://www.pitaso.com)",
-  "license": "MIT",
+  "author": {
+    "name": "Ludovic Valente",
+    "email": "ludovic.valente@gmail.com",
+    "url": "http://www.pitaso.com/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ludoo0d0a/geocaching-api.git"
+  },
+  "bugs": {
+    "url": "http://github.com/ludoo0d0a/geocaching-api/issues"
+  },
+  "license": "ISC", 
   "dependencies": {
-    "base64": "^2.1.0",
-    "lodash": "^3.10.1",
+    "lodash": "^4.14.1",
     "passport-geocaching": "^0.1.x",
-    "request": "^2.60.0"
+    "request": "^2.x"
   },
   "devDependencies": {
-    "chai": "*",
-    "mocha": "*"
+    "mocha": "^3.x",
+    "chai": "*"
   }
 }
