--- a/examples/login/package.json
+++ b/examples/login/package.json
@@ -1,18 +1,21 @@
 {
   "name": "geocaching-client-example",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "app.js",
+  "scripts": {
+    "start": "node app"
+  },
   "dependencies": {
-    "body-parser": ">= 1.4.3",
-    "cookie-parser": ">= 1.3.2",
-    "ejs": ">= 0.0.0",
-    "express": ">= 4.4.5",
-    "express-ejs-layouts": "^1.1.0",
-    "express-session": ">= 1.6.1",
-    "method-override": ">= 2.0.2",
-    "morgan": ">= 1.1.1",
-    "passport": ">= 0.0.0",
-    "geocaching-api": "^1.0.2",
-    "lodash": "^3.10.1"
+    "body-parser": "^1.18.0",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
+    "express": "^4.15.4",
+    "express-ejs-layouts": "^2.3.1",
+    "express-session": "^1.15.5",
+    "method-override": "^2.3.9",
+    "morgan": "^1.8.2",
+    "passport": "^0.4.0",
+    "geocaching-api": "^1.0.7",
+    "lodash": "4.17.4"
   }
 }
