--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geocaching-api",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "",
   "main": "lib/geocaching-api.js",
   "scripts": {
@@ -16,7 +16,7 @@
   "author": {
     "name": "Ludovic Valente",
     "email": "ludovic.valente@gmail.com",
-    "url": "http://www.pitaso.com/"
+    "url": "http://www.geoking.fr"
   },
   "repository": {
     "type": "git",
