--- a/generator/package.json
+++ b/generator/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "author": "",
+  "author": "Ludovic Valente",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
