Replace all AccessToken with script

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -3,5 +3,6 @@
     "groupId": "fr.geoking",
     "artifactId": "geocaching-api",
     "artifactVersion": "1.0.0",
-    "library": "javascript"
+    "library": "javascript",
+    "authMethods": "AccessToken"
 }
