--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "geocaching-api",
-  "version": "2.1.0",
+  "version": "2.1.0-beta2",
   "description": "Node.js client for Geocaching API",
-  "main": "dist/index.js",
+  "main": "dist/geocaching-api.js",
   "scripts": {
     "build": "babel src -d dist",
     "prepare": "npm run build",
